--- a/src/template/ast/components/AggregateComponent.tt
+++ b/src/template/ast/components/AggregateComponent.tt
@@ -37,6 +37,10 @@ $if(!#isNTA)
     return this;
   }
 
+  public $Host $Host.set$Name($ASTNode node) {
+    setChild(node, $Index);
+    return this;
+  }
 $endif
 $if(#ntaShadowingNonNTA)
   /**
@@ -46,6 +50,10 @@ $if(#ntaShadowingNonNTA)
    * @apilevel internal
    */
   public $Host $Host.set$Name($Type node) {
+    throw new Error("Can not replace NTA child $Name in $Host!");
+  }
+
+  public $Host $Host.set$Name($ASTNode node) {
     throw new Error("Can not replace NTA child $Name in $Host!");
   }
 
