Generate Or and Seq meta-nodes
The Or node should represent a parsing alternative, while Seq nodes
are used to represent the application of a dotted-rule, which does
not have any semantic action.

--- a/src/template/ast/components/ListComponent.tt
+++ b/src/template/ast/components/ListComponent.tt
@@ -185,6 +185,7 @@ $endif
     return this;
   }
 
+$if(GenerateGenericMethods)
   $Modifier $Host $Host.set$Name($ASTNode node, int i) {
     $ListType list = get$(Name)List();
 $if(EmptyContainerSingletons)
@@ -198,6 +199,7 @@ $else
 $endif
     return this;
   }
+$endif
 
 $if(#isNTA)
   /**
